PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- The ~M-S-<f5>~ and ~M-S-<f6>~ are no longer bound to 1-line scroll of other window, freeing the ~M-<f6>~
  key for use as a prefix.  The *pel-scroll-down-other* and *pel-scroll-up-other* are now only available in the
  *pel-∑scroll* hydra as ~C-<f7> M-<up>~ and ~C-<f7> M-<down>~ respectively.
- *pel-open-at-point* is no longer bound to ~<M-<f6>~ freeing this key sequence to be used as a prefix.
  Instead it is now bound to ~M-**~.
- Add support for strace-mode when *pel-use-strace-mode* user-option is on (set to t).
  The ~<f11> b M-t~ key sequence is bound to *strace-mode*.
- Add partial PEL support for Modula2 when the *pel-use-modula2* user option is set.
  This uses Emacs built-in modula-2-mode.  It does provide usual PEL control for tab, help and minor mode activation.
- Add partial PEL support for Pascal when the *pel-use-pascal* user option is set.
  This uses Emacs built-in pascal-mode.  It does provide usual PEL control for tab, help and minor mode activation.
- Add *pel-rst-use-single-underscore-for-single-word-ref* user-option.  It controls
  whether the *pel-rst-makelink* command (bound to ~<f12> .~ in rst-mode buffers) uses the enclosing markup
  for creating a reference to a word (like =<word>_=) when the user-option is set to nil (the default), or
  with a single trailing underscore (like =word_=) otherwise.  Using the enclosing markup facilitates navigation to referenced
  documents.
- Add command to open the Emacs mailing list info about a specific Emacs bug: *pel-emacs-bug-info* bound to ~<f11> ? e B~.
- Add support for isearch-mb global minor mode, activated by *pel-use-isearch-mb* user-option that can be set to t or use-from-start
  which activates it manually or automatically from start.  The ~<f11> s i~ key sequnce is bound to *isearch-mb-mode* that can be used